--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xgrub-password (1.0.3+fbb375c) focal; urgency=medium
+
+  * [fbb375c0] first release
+
+ -- Ivan Danov <idanov@gmail.com>  Sat, 12 Mar 2022 15:06:13 +0200
+
 xgrub-password (1.0.1+3720ad4) focal; urgency=medium
 
   * [3720ad42] Initial commit
