--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+xgrub-password (1.0.10+4c09991) focal; urgency=medium
+
+  * [534b8531] add gitaction workflow
+  * [2b7a3d43] Makefile fix
+  * [b9fa200d] Makefile fix
+  * [08d7510c] fix gitaction workflow
+  * [cbfd042a] Makefile fix
+  * [4c099912] fix gitaction workflow
+
+ -- Ivan Danov <idanov@gmail.com>  Sat, 12 Mar 2022 15:41:56 +0200
+
 xgrub-password (1.0.3+fbb375c) focal; urgency=medium
 
   * [fbb375c0] first release
