--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xgrub-password (1.0.12+bdec1f0) focal; urgency=medium
+
+  * [bdec1f03] fix gitaction workflow
+
+ -- Ivan Danov <idanov@gmail.com>  Sat, 12 Mar 2022 15:44:45 +0200
+
 xgrub-password (1.0.10+4c09991) focal; urgency=medium
 
   * [534b8531] add gitaction workflow
