--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xgrub-password (1.0.14+93aabf8) focal; urgency=medium
+
+  * [93aabf82] fix gitaction workflow: Makefile fix
+
+ -- Ivan Danov <idanov@gmail.com>  Sat, 12 Mar 2022 15:49:17 +0200
+
 xgrub-password (1.0.12+bdec1f0) focal; urgency=medium
 
   * [bdec1f03] fix gitaction workflow
