--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xgrub-password (1.0.16+1ddc562) focal; urgency=medium
+
+  * [1ddc5624] fix gitaction workflow
+
+ -- Ivan Danov <idanov@gmail.com>  Sat, 12 Mar 2022 15:54:39 +0200
+
 xgrub-password (1.0.14+93aabf8) focal; urgency=medium
 
   * [93aabf82] fix gitaction workflow: Makefile fix
